adding the first lesson

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         
             <ol>
                 <li>
-                    <p><a href="">قواميس بايثون</a></p>
+                    <p><a href="قواميس بايثون.html">قواميس بايثون</a></p>
                 </li>
                 <li>
                     <p><a href="">تمرين برنامج الدرجات</a></p>
