adding the second lesson

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <p><a href="قواميس بايثون.html">قواميس بايثون</a></p>
                 </li>
                 <li>
-                    <p><a href="">تمرين برنامج الدرجات</a></p>
+                    <p><a href="تمرين برنامج الدرجات.html">تمرين برنامج الدرجات</a></p>
                 </li>
                 <li>
                     <p><a href="">القوائم والقواميس المتداخلة</a></p>
