adding the third lesson

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <p><a href="تمرين برنامج الدرجات.html">تمرين برنامج الدرجات</a></p>
                 </li>
                 <li>
-                    <p><a href="">القوائم والقواميس المتداخلة</a></p>
+                    <p><a href="القوائم والقواميس المتداخلة.html">القوائم والقواميس المتداخلة</a></p>
                 </li>
                 <li>
                     <p><a href="">تمرين قاموس داخل قائمة</a></p>
