adding the fourth lesson

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <p><a href="القوائم والقواميس المتداخلة.html">القوائم والقواميس المتداخلة</a></p>
                 </li>
                 <li>
-                    <p><a href="">تمرين قاموس داخل قائمة</a></p>
+                    <p><a href="تمرين قاموس داخل قائمة.html">تمرين قاموس داخل قائمة</a></p>
                 </li>
                 <li>
                     <p><a href="">تعليمات برنامج المزاد السري والمخطط</a></p>
