--- a/القوائم والقواميس المتداخلة.html
+++ b/القوائم والقواميس المتداخلة.html
@@ -146,7 +146,7 @@ travel_log = [
     },
     {
         "country": "Germany",
-        "cities_visited": ["Berlin", "Hamburg", "Stuttgart",
+        "cities_visited": ["Berlin", "Hamburg", "Stuttgart"],
         "total_visits": 12,
     },
 ]
