adding the fifth lesson

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <p><a href="تمرين قاموس داخل قائمة.html">تمرين قاموس داخل قائمة</a></p>
                 </li>
                 <li>
-                    <p><a href="">تعليمات برنامج المزاد السري والمخطط</a></p>
+                    <p><a href="تعليمات برنامج المزاد السري والمخطط.html">تعليمات برنامج المزاد السري والمخطط</a></p>
                 </li>
                 <li>
                     <p><a href="">الحل والكود الكامل لبرنامج المزاد السري</a></p>
