adding the final lesson

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <p><a href="تعليمات برنامج المزاد السري والمخطط.html">تعليمات برنامج المزاد السري والمخطط</a></p>
                 </li>
                 <li>
-                    <p><a href="">الحل والكود الكامل لبرنامج المزاد السري</a></p>
+                    <p><a href="الحل والكود الكامل لبرنامج المزاد السري.html">الحل والكود الكامل لبرنامج المزاد السري</a></p>
                 </li>
             </ol>
             <p>
